# muffinpanrecipes

./: .cursorignore  .cursorrules  .env.example  .gitignore  .scaffolding-version  .vercelignore  00_Index_MuffinPanRecipes.md  AGENTS.md  AI Character Voice Consistency Research.md  BOOKEND_TESTING_LOG.md  CLAUDE.md  CODE_REVIEW_GOVERNANCE_COMPLIANCE_2026-03-01.md  CODE_REVIEW_OPUS_V1.md  CODE_REVIEW_OPUS_V2.md  CODE_REVIEW_OPUS_V3.md  COMPRESSED_TIMELINE_SPEC.md  CREATIVE_BIBLE.md  DECISIONS.md  DEPLOYMENT.md  DIALOGUE_IMPLEMENTATION_PLAN.md  DIRECTION.md  ERIKS_TODO.md  EXTERNAL_RESOURCES.yaml  GEN-LOOP-BLOCKERS.md  HANDOFF_OPENCLAW.md  IMPLEMENTATION_SUMMARY_V2.md  INTENTIONS.md  MODEL_COMPARISON_REPORT.md  Makefile  OPENCLAW_PREFLIGHT.md  PLAN_5039_STORAGE_FIX.md  PLAN_KANBAN_PROMPTS_PHASE2.md  PLAN_NEWLINE_SANITIZATION.md  PRD.md  PROGRESS.md  PROJECT_DOD.md  README.md  REVIEW.md  REVIEWS_AND_GOVERNANCE_PROTOCOL.md  REVIEW_V2.md  (+16 more)
.agent/: instructions.md
.agentsync/: README.md
.codex/: protected_paths.json
Documents/: REVIEWS_AND_GOVERNANCE_PROTOCOL.md  WORKFLOW_DIAGRAM.md  character-creation-vision-v1.md
_docs_archive/: CONTEXT_CEILING_STRATEGY.md  README.md  WORKFLOW_DIAGRAM.md  character-creation-vision-v1.md
_handoff/: IMPLEMENTATION_SUMMARY.md  PROPOSAL_FINAL.md  VALIDATION_FIXES.md
backend/: README.md  __init__.py  config.py  orchestrator.py  storage.py
data/: character-profiles.md  image_generation_jobs.json
docs/: CREATIVE_BIBLE.md  DIALOGUE_IMPLEMENTATION_PLAN.md  ENV_VARS.md  HANDOFF_OPENCLAW.md  PRD.md  README.md  REVIEWS_AND_GOVERNANCE_PROTOCOL.md  publishing-pipeline-audit.md
idea-jar/: 001-hiring-arc-social-media-manager.md
prompt-research/: TESTING_METHODOLOGY.md  compression_program.md  compression_prompts.py  compression_results.tsv  compression_runner.py  evaluator.py  program.md  results.tsv  runner.py
reviews/: admin-backend-code-review.md
scripts/: README.md  art_director.py  backfill_webp.py  batch_generate_muffins.py  build_site.py  cleanup_image_backlog.py  cleanup_test_episodes.py  compare_image_providers.py  cron_stage_schedules.sh  direct_harvest.py  fix_catalog.py  fix_category_dessert_to_sweet.py  fix_encoding.py  fix_stale_titles.py  fix_w10_lemon_meringue_image.py  generate_image_prompts.py  generate_openai_benchmark_report.py  generate_recipe_page.py  grade_dialogue_runs.py  health_check.py  (+21 more)
(+469 files in other folders)
